# chiyoda

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README2.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  todo.txt
.github/: PULL_REQUEST_TEMPLATE.md
.playwright-cli/: page-2026-06-24T02-07-37-737Z.yml  page-2026-06-24T02-07-47-958Z.yml
chiyoda/: __init__.py  __version__.py  _logging.py  cli.py
data/: adversary_incidents.yaml
docs/: 3d_viewer.md  3d_viewer_simulation.md  adversary_taxonomy.md  architecture_overview.md  calibration_route_choice_2025.md  causal_layer_assumptions.md  developer_environment.md  dispatcher_demo.md  docker.md  empirical_priors.md  event_reference_ingestion.md  external_validation.md  fds_agreement.md  generated_population_calibration.md  glossary.md  hazard_field_import.md  homophily_3d_mobility.md  hostile_channel_threat_model.md  implementation_audit.md  info_safety_theory.md  llm_agent_decisions.md  llm_selective_controls.md  modeling_gaps.md  padm_mapping.md  paper_outline_info_warfare.md  pathfinding_strategies.md  perf_baselines.md  policy_engagement.md  population_calibration.md  reproducibility_kit.md  rimea_results.md  rl_interface.md  scenario.schema.json  scenario_assertions.md  sfm_calibration.md  standards_research.md  station_geometry_workflow.md  structure-schema.md  structure.schema.json  trajectory_reference_workflow.md  (+1 more)
notebooks/: getting_started.ipynb  research_template.ipynb
paper/: Makefile  README.md  REPRODUCIBILITY.md  SELF_REVIEW.md  llm_tables.tex  main.tex  main_smoke.tex  references.bib
presets/: blackout-core.json  corp-skyline.json  flooded-slum.json  market-collapse.json
rules/: abyssal-concrete.json  autonomous-builder.json  balanced-base.json  blackout-spine.json  bridge-void.json  corp-arcology.json  crawler-city.json  exclusion-maze.json  flood-market.json  gravity-shaft.json  ice-shelf.json  kowloon-decay.json  linear-city.json  marine-platform.json  orbital-ring.json  shrine-stack.json  silicon-cathedral.json  space-elevator-anchor.json  volcanic-caldera.json
scenarios/: edge_bottleneck_station.yaml  example.yaml  example_study.yaml  kasumigaseki_osm_ci.yaml  station_baseline.yaml  station_sarin.yaml  study_generated_population_calibration.yaml  study_information_control.yaml  study_intervention_ablation.yaml  (+34 more)
(+297 files in other folders)
