[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chiyoda"
description = "Information-warfare-aware evacuation and crowd dynamics simulator."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Gabriel Ong", email = "gabrielong@elegantelefant.com" },
]
keywords = ["simulation", "evacuation", "agent-based", "crowd-dynamics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/gongahkia/chiyoda"
Issues = "https://github.com/gongahkia/chiyoda/issues"

[project.scripts]
chiyoda = "chiyoda.cli:main"

[tool.setuptools.packages.find]
include = ["chiyoda*"]
exclude = ["tests*", "scripts*", "notebooks*"]

[tool.setuptools.package-data]
"chiyoda.analysis" = [
    "viewer_assets/js/sim/*.js",
    "viewer_assets/img/*.png",
    "viewer_assets/img/*.md",
]

[tool.setuptools.dynamic]
version = { attr = "chiyoda.__version__.__version__" }
dependencies = { file = ["requirements.txt"] }

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line length handled by black
    "B008",  # function call in default arg used widely for click defaults
    "UP038", # isinstance tuple is fine for now
    "B028",  # warnings stacklevel not load-bearing here
    "E741",  # single-char loop vars in math kernels
    "E402",  # post-sys.path-tweak imports in scripts
    "E712",  # pandas Series == True idiom
    "B007",  # tuple unpack in for-loop is fine
    "UP007", # leave Union typing alone for now
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "F401", "F841", "B007", "E712"]
"chiyoda/agents/__init__.py" = ["F401"]
"chiyoda/**/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "slow: opt-in tests with large scenarios or wall-clock budgets",
]
